--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ h4 {
 	height: 100%;
 	position: relative;
 	transform-origin: left;
-	background-image: url(img/2.jpg);
+	background-image: url(2.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: 35px -95px;
